Attempt to improve memory usage of builder.